通过带参构造函数实例化对象